--- a/index.css
+++ b/index.css
@@ -117,15 +117,19 @@ p {
   border-radius: 2rem;
 
 }
-
-#education {
+.about-container {
+  display: flex;
+}
+.education {
   border: 1px solid grey;
   text-align: center;
   border-radius: 20px;
+  margin: 10px;
 }
 
-#education p {
-  text-align: center;
+.education p {
+  text-align: justify;
+  padding: 10px;
 }
 
 .info {
